--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,5 +6,18 @@ theme:
   logo: https://fastapi.tiangolo.com/img/icon-white.svg
   favicon: https://fastapi.tiangolo.com/img/favicon.png
   language: zh
+  palette:
+
+    # Palette toggle for light mode
+    - scheme: default
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
 repo_name: jindaxiang/msscore
 repo_url: https://github.com/jindaxiang/msscore
