--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,8 @@ theme:
   logo: https://fastapi.tiangolo.com/img/icon-white.svg
   favicon: https://fastapi.tiangolo.com/img/favicon.png
   language: zh
+  features:
+    - content.code.annotate
   palette:
 
     # Palette toggle for light mode
@@ -21,3 +23,9 @@ theme:
         name: Switch to light mode
 repo_name: jindaxiang/msscore
 repo_url: https://github.com/jindaxiang/msscore
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
